<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="lab.gti350.weatherstation.MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <TextView
                android:text="Status :"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/labelStatus"
                android:textSize="30sp"
                tools:ignore="HardcodedText"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/status"
                android:textAlignment="center"
                android:textSize="30sp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:weightSum="1">

                <ImageView
                    android:layout_gravity="center"
                    app:srcCompat="@mipmap/ic_launcher"
                    android:id="@+id/imageView"
                    android:adjustViewBounds="false"
                    android:cropToPadding="false"
                    android:contentDescription="@string/image"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginBottom="10dp"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:text="Temperature :"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/labelTemperature"
                    tools:ignore="HardcodedText"
                    android:layout_margin="5dp"
                    android:textSize="30sp"
                    android:textStyle="normal|bold"
                    android:textAllCaps="false" />

                <TextView
                    android:text="@string/temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/temperature"
                    android:layout_margin="5dp"
                    android:textSize="30sp"
                    android:textAlignment="center" />

                <TextView
                    android:text="Humidité :"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/labelHumidity"
                    android:textSize="30sp"
                    android:textStyle="normal|bold"
                    tools:ignore="HardcodedText"
                    android:textAllCaps="false" />

                <TextView
                    android:text="@string/humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/humidity"
                    android:textSize="30sp"
                    android:textAlignment="center" />

                <TextView
                    android:text="Ressenti :"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/labelHeatIndex"
                    android:textSize="30sp"
                    android:textStyle="normal|bold"
                    tools:ignore="HardcodedText"
                    android:textAllCaps="false" />

                <TextView
                    android:text="@string/heatIndex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/heatIndex"
                    android:textSize="30sp"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</RelativeLayout>
